--- a/client/src/components/css/navbar.css
+++ b/client/src/components/css/navbar.css
@@ -24,7 +24,7 @@
 }
 
 .nav .logo a {
-    top: -34px;
+    top: -32px;
     height: 20px;
 }
 
@@ -177,7 +177,25 @@ li {
     }
 }
 
+@media (min-width: 750px) and (max-width: 950px) {
+    #navbar .logo a {
+        position: relative;
+        top: 0px;
+        height: 20px;
+    }
+}
+
+@media (min-width: 950px) and (max-width: 1100 px) {
+    .navlinks {
+        right: 31%;
+    }
+}
+
 @media (min-width: 750px) and (max-width: 990px) {
+
+    .navlinks {
+        right: 31%;
+    }
 
     .nav-link:link {
         cursor: pointer;
